refactor(core): 业务逻辑重构做减法